# CourseWork

./: LICENSE  README.md
XSmall-HMI-Player/: CMakeLists.txt  LICENSE  README.md  saved_state.json
XSmall-HMI-Player/config/: default_screen.xml
XSmall-HMI-Player/include/: Button.h  Constants.h
XSmall-HMI-Player/src/: Button.cpp  HmiPlayer.cpp  VariableDatabase.cpp  jise
XSmall-HMI-Player/tests/: CMakeLists.txt  README.md  test_scene_factory.cpp  test_variable_database.cpp  test_visual_objects.cpp  test_xml_loader.cpp
include/: Button.h
